--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,27 @@ version: '3'
 
 services:
   frontend:
-    # build: frontend
     image: ghcr.io/dliebg/schwering_app_air_conditioner/frontend:main
     container_name: schwering_app_air_conditioner_frontend
     restart: unless-stopped
     ports:
       - 10004:80
+    labels:
+      - "com.centurylinklabs.watchtower.scope=schwering_app_air_conditioner"
 
   backend:
-    # build: backend
     image: ghcr.io/dliebg/schwering_app_air_conditioner/backend:main
     container_name: schwering_app_air_conditioner_backend
     restart: unless-stopped
     env_file: .env
+    labels:
+      - "com.centurylinklabs.watchtower.scope=schwering_app_air_conditioner"
 
   watchtower:
     image: containrrr/watchtower
     container_name: schwering_app_air_conditioner_watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: schwering_app_air_conditioner_frontend schwering_app_air_conditioner_backend -i 3600
+    command: schwering_app_air_conditioner_frontend schwering_app_air_conditioner_backend -i 3600 --scope schwering_app_air_conditioner
+    labels:
+      - "com.centurylinklabs.watchtower.scope=schwering_app_air_conditioner"
